Switch to fixed threads with 4 lower bound